0.17
----
- New Docking widget layout
- Improved componentized services
- UIComponent rewrite (due to new interface)

0.16.0
------
- Guides support from Gaphas 0.7.0
- "hand written" drawing style
- Keyboard shortcuts for toolbox selection
- Fixed issue in undo transaction handling
- Proper dialog when exiting with changed model

0.15.0
------
- Fixed bugs related to diagrams loading.
- Subsystem item is added (part of components).
- Partition item, known as swimlanes, is added (part of actions).
- Node item can group other nodes, artifacts and components.
- Stereotype names shown in stereotype attribute compartments are centered.
- Stereotype creating and applying is simplified.
- Association ends stereotype editing is supported.
- State item supports entry, exit and do activities.

0.14.0
------
- Reintroduced assembly connections.
- Stereotypes can have attributes.
- Major speed improvements due to new notification system.

0.13.1
------
- added desktop file and gaphor icons
- update to gaphas 0.4

0.13.0
------
- Transition to zope events completed.
- state machines

For a complete set of changes and fixes see:
  http://gaphor.devjavu.com/query?milestone=Gaphor+0.13.0

0.12.0
------
- undo/redo fixes
- allow to create packages in model tree
- improved messages on communication diagrams
- improved text align algorithms
- tagged values can be reordered and removed (like class attributes and
  operations)
- text entry used to on-diagram editing is much nicer, now

0.11.2
------
- improved items's connection adapters 
- fixed comment line, comment, message and lifeline items connection
  adapters to implement UML specification more closely
- items glueing speedup
- property page is updated when association or other diagram line connects
  to appropriate diagram items
- removing and reordering of class' attributes and operations is possible
  again
- association name and multiplicity editing improvements

0.11.1
------
- support gaphas 0.3.0 API
- bugfixes

0.11.0